# trappy-sdl

./: .gitignore  CMakeLists.txt  README.md  garbage
include/: audio_manager.h  collideable.h  collision_system.h  config.h  disappearing_platform.h  game.h  layer.h  map.h  platform.h  player.h  projectile.h  sprite.h  texture.h  tmx_parser.h  trap_platform.h
resources/: map.tmx
src/: Grass_01.png:Zone.Identifier  audio_manager.cpp  collision_system.cpp  disappearing_platform.cpp  game.cpp  layer.cpp  main.cpp  map.cpp  map.tmx  platform.cpp  player.cpp  projectile.cpp  sprite.cpp  texture.cpp  tmx_parser.cpp  trap_platform.cpp
